*Fixed aximx50 for kernel 3.0.3 so it compiles -Disabled the aximx50 sound driver because it broke between 2.6.36 (I'll fix it later) +Added basic power management type stuff (Detect AC/USB charging, backlight brightness) Everything is untested

--- a/arch/arm/mach-pxa/Kconfig
+++ b/arch/arm/mach-pxa/Kconfig
@@ -270,6 +270,7 @@ config MACH_X50
 	bool "Dell Axim X50/X51(v)"
 	select PXA27x
 	select KEYBOARD_GPIO
+	select HAVE_PWM
 	help
 	  Say Y here if you plan to boot the kernel on the Dell Axim X50/X51(v)
 	  series of PDAs. Currently there is only basic support for this
